5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1621_2921.log
== TEST (2019-04-01 19:15:28) 
-- CODE:
p = float(input("Qual o preço do primeiro jogo? "))
q = float(input("Qual o preço do sengundo jogo? "))
p1 = p*(25/100)
p2 = p - p1
total = q - (q * (25/100))
print(round(p2, 2))
print(round(total, 2))
-- OUTPUT:
106.76
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:32) 
-- CODE:
precojogo1 = float(input("Qual o preço do primeiro jogo? "))
precojogo2 = float(input("Qual o preço do sengundo jogo? "))
p1 = precojogo1*(25/100)
total = q - (q * (25/100))
print(round(p1, 2))
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = q - (q * (25/100))
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:47) 
-- CODE:
precojogo1 = float(input("Qual o preco do primeiro jogo? "))
precojogo2 = float(input("Qual o preco do sengundo jogo? "))
p1 = precojogo1*(25/100)
total = q - (q * (25/100))
print(round(p1, 2))
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = q - (q * (25/100))
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:17:35) 
-- CODE:
precojogo1 = float(input("Qual o preco do primeiro jogo? "))
precojogo2 = float(input("Qual o preco do sengundo jogo? "))
p1 = precojogo1(precojogo1*(25/100))
total = precojogo2 - (precojogo2 * (25/100))
print(round(p1, 2))
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p1 = precojogo1(precojogo1*(25/100))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:14) 
-- CODE:
precojogo1 = float(input("Qual o preco do primeiro jogo? "))
precojogo2 = float(input("Qual o preco do sengundo jogo? "))
p1 = precojogo1 - (precojogo1*(25/100))
total = precojogo2 - (precojogo2 * (25/100))
print(round(p1, 2))
print(round(total, 2))
-- OUTPUT:
106.76
66.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:19:44) 
-- CODE:
precojogo1 = float(input("Qual o preco do primeiro jogo? "))
precojogo2 = float(input("Qual o preco do sengundo jogo? "))
p1 = precojogo2 - (precojogo2*(25/100))
total = p1 + precojogo1
print(round(p1, 2))
print(round(total, 2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:19:52) 
-- CODE:
precojogo1 = float(input("Qual o preco do primeiro jogo? "))
precojogo2 = float(input("Qual o preco do sengundo jogo? "))
p1 = precojogo2 - (precojogo2*(25/100))
total = p1 + precojogo1
print(round(p1, 2))
print(round(total, 2))
-- EXECUTION TIME:
0.147488
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
